@@ -369,6 +369,7 @@ Included
 - `intake` now also fails closed when `--out` equals or overlaps the input path (`INTAKE_OUT_CONFLICTS_INPUT`), preventing staged-finalize cleanup from deleting or replacing the source input.
 - `ticket-pack` now fails closed when `--out` equals or overlaps the source out-root (`TICKET_PACK_OUT_CONFLICTS_INPUT`), preventing self-packing and staged bundle writes inside the evidence source tree.
 - `license issue` now fails closed when `--out` matches `--key` (`LICENSE_OUT_CONFLICTS_KEY`), preventing accidental overwrite of the private signing key file.
+- `export-json --format normalized_v0` now fails closed when `--out` targets known source evidence files in the source out-root (`EXPORT_JSON_OUT_CONFLICTS_SOURCE`), preventing accidental overwrite of receipts/reports used for normalization.
 - Compare operator receipts now include full compare evidence links (`compare_receipt.json`, `compare_report.txt`, `weftend/README.txt`) instead of compare-receipt-only linkage.
 - Compare operator receipts now also include `weftend/privacy_lint_v0.json`, and compare runs perform a final no-write privacy-lint recheck after final operator receipt write.
 - Compare now enforces explicit no-orphan evidence validation before finalize (`COMPARE_EVIDENCE_CHAIN_INVALID`), requiring all produced compare artifacts (except `operator_receipt.json`) to be referenced in operator receipt entries.
